<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="FreeformWindowOrientation_landscape" />
    <string name="FreeformWindowOrientation_portrait" />
    <string name="FreeformWindowSize_maximize" />
    <string name="FreeformWindowSize_phone" />
    <string name="FreeformWindowSize_tablet" />
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anythink_basead_ad_text">AD</string>
    <string name="anythink_basead_click_empty">This ads does not support click to open</string>
    <string name="anythink_basead_click_fail">Failed to open Ads</string>
    <string name="anythink_cm_app_info_app_label">AD</string>
    <string name="anythink_cm_app_info_app_name">App:</string>
    <string name="anythink_cm_app_info_publish">Publisher:</string>
    <string name="anythink_cm_app_info_update_time">Update:</string>
    <string name="anythink_cm_app_info_version">Ver:</string>
    <string name="anythink_cm_click_for_detail">Click now for details</string>
    <string name="anythink_cm_dialog_alert_cancel_close">Continue</string>
    <string name="anythink_cm_dialog_alert_confim_close">Close it</string>
    <string name="anythink_cm_dialog_alert_confim_close_cancel">Cancel</string>
    <string name="anythink_cm_dialog_alert_confim_close_continue">Continue</string>
    <string name="anythink_cm_dialog_alert_confim_close_desc">You will not be rewarded after closing the window</string>
    <string name="anythink_cm_dialog_alert_confim_close_warn">Confirm to close?</string>
    <string name="anythink_cm_dialog_alert_confim_close_warn_close">If you choose to continue, you will receive a reward after the end. Confirm closed?</string>
    <string name="anythink_cm_dialog_alert_confim_close_warn_continue">If you choose to continue, you will receive a reward after the end. Whether to continue?</string>
    <string name="anythink_cm_dialog_alert_confim_close_warn_tips">Tips</string>
    <string name="anythink_cm_dialog_alert_continue_to_play">Continue</string>
    <string name="anythink_cm_feedback_btn_text">feedback</string>
    <string name="anythink_cm_feedback_dialog_close_close">Close</string>
    <string name="anythink_cm_feedback_dialog_close_submit">Submit</string>
    <string name="anythink_cm_feedback_dialog_content_balck_screen">Black screen</string>
    <string name="anythink_cm_feedback_dialog_content_cnr">Click no response</string>
    <string name="anythink_cm_feedback_dialog_content_other">Other issues</string>
    <string name="anythink_cm_feedback_dialog_content_stuck">Video stuck</string>
    <string name="anythink_cm_feedback_dialog_title">feedback</string>
    <string name="anythink_cm_segment_process_bar_hint_text" formatted="false">The %s is playing, %s videos.</string>
    <string name="anythink_cm_segment_process_bar_hint_text_lite" formatted="false">ADS %s/%s</string>
    <string name="anythink_cm_shake_view_click_default_inst">Install</string>
    <string name="anythink_cm_shake_view_click_default_open">Open</string>
    <string name="anythink_cm_shake_view_click_default_view">View</string>
    <string name="anythink_cm_shake_view_hint_text">Shake your phone</string>
    <string name="anythink_cm_shake_view_view_other_app">Redirect to third party application</string>
    <string name="anythink_cm_video_auto_play_after">Auto play after</string>
    <string name="anythink_default_question_title_text">Which of the following ads is currently playing?</string>
    <string name="anythink_fail_tip_text">Try again next time</string>
    <string name="anythink_fail_title_text">Wrong answer!</string>
    <string name="anythink_interstitial_text_loading_default">The ad is loading...</string>
    <string name="anythink_location_allow">Allow</string>
    <string name="anythink_location_ask_title">Allow access your location？</string>
    <string name="anythink_location_deny">Disallow</string>
    <string name="anythink_myoffer_anim_reward_exit_confirm_continue">Continue</string>
    <string name="anythink_myoffer_anim_reward_exit_confirm_msg">Watch the ad for %s seconds to get rewards, are you sure you want to leave?</string>
    <string name="anythink_myoffer_confirm_msg">Open</string>
    <string name="anythink_myoffer_continue">Continue</string>
    <string name="anythink_myoffer_count_down_finish_rewarded">You have been rewarded</string>
    <string name="anythink_myoffer_count_down_to_rewarded">View for &lt;font color=#FFFFFF>%d&lt;/font> seconds to get the reward</string>
    <string name="anythink_myoffer_cta_install_now">Install Now</string>
    <string name="anythink_myoffer_cta_learn_more">Learn More</string>
    <string name="anythink_myoffer_feedback_abnormal">Abnormal</string>
    <string name="anythink_myoffer_feedback_black_white_screen">Show Failed</string>
    <string name="anythink_myoffer_feedback_can_not_close">Not Close</string>
    <string name="anythink_myoffer_feedback_fraud_ads">Fraud Ads</string>
    <string name="anythink_myoffer_feedback_hint">Please enter the suggestion first! Suggestion is within 100 words</string>
    <string name="anythink_myoffer_feedback_induce_click">Induce Click</string>
    <string name="anythink_myoffer_feedback_not_interesting">Boring</string>
    <string name="anythink_myoffer_feedback_plagiarism">Plagiarism</string>
    <string name="anythink_myoffer_feedback_report">Report</string>
    <string name="anythink_myoffer_feedback_submit">Submit</string>
    <string name="anythink_myoffer_feedback_suggestion">Suggestion</string>
    <string name="anythink_myoffer_feedback_text">Feedback</string>
    <string name="anythink_myoffer_feedback_video_freeze">Video Freeze</string>
    <string name="anythink_myoffer_feedback_violation_of_laws">Illegal</string>
    <string name="anythink_myoffer_feedback_vulgar_porn">Vulgar porn</string>
    <string name="anythink_myoffer_g2c_fuu_ori_hint">Slide to jump</string>
    <string name="anythink_myoffer_g2c_fuu_ori_hint_small">Slide to jump</string>
    <string name="anythink_myoffer_g2c_hint_text">You can click the content below or the button to get more details</string>
    <string name="anythink_myoffer_g2c_jump_confirm_hint_text1">Ignore ads to view details</string>
    <string name="anythink_myoffer_g2c_jump_confirm_hint_text2">continue when you return</string>
    <string name="anythink_myoffer_g2c_jump_confirm_ignore">Ignore</string>
    <string name="anythink_myoffer_g2c_question_dialog_default_answer">AD</string>
    <string name="anythink_myoffer_g2c_question_dialog_hint">Note: Please select and browse the relevant content</string>
    <string name="anythink_myoffer_g2c_question_dialog_title">Which option does the video content relate to?</string>
    <string name="anythink_myoffer_g2c_seek_to_click">Drag to complete the puzzle</string>
    <string name="anythink_myoffer_g2c_slide_to_click">Swipe to view more</string>
    <string name="anythink_myoffer_give_up">Cancel</string>
    <string name="anythink_myoffer_intercept_web_file_download">"This Download isn't supported."</string>
    <string name="anythink_myoffer_minor_cta_text">Learn More</string>
    <string name="anythink_myoffer_next_step">Next</string>
    <string name="anythink_myoffer_panel_disclaimer">Disclaimer</string>
    <string name="anythink_myoffer_panel_funtion">Desc</string>
    <string name="anythink_myoffer_panel_permission">Permission</string>
    <string name="anythink_myoffer_panel_privacy">Privacy</string>
    <string name="anythink_myoffer_panel_version">v%s</string>
    <string name="anythink_myoffer_red_packet_bless_text">Best wishs</string>
    <string name="anythink_myoffer_red_packet_cta_text">Recieve Now</string>
    <string name="anythink_myoffer_red_packet_currency">USD</string>
    <string name="anythink_myoffer_red_packet_hint_link4_text">Deposited to Balance, Download to Receive</string>
    <string name="anythink_myoffer_red_packet_hint_linkother_text">Deposited to Balance, View More to Receive</string>
    <string name="anythink_myoffer_red_packet_title_text">Red Packet from %s</string>
    <string name="anythink_myoffer_reward_exit_confirm_continue">Continue</string>
    <string name="anythink_myoffer_reward_exit_confirm_give_up">Give up</string>
    <string name="anythink_myoffer_reward_exit_confirm_msg">Watch the video for %s seconds to get rewards. Are you sure you want to leave?</string>
    <string name="anythink_myoffer_reward_exit_tips_msg">Incomplete viewing,no rewards.</string>
    <string name="anythink_myoffer_reward_tips">%d s left</string>
    <string name="anythink_myoffer_reward_tips_rewarded">Rewarded</string>
    <string name="anythink_myoffer_rp_second_endcard_title">Immediate WeChat Withdrawal</string>
    <string name="anythink_myoffer_rp_second_hint_link4_text">Download Now</string>
    <string name="anythink_myoffer_rp_second_hint_linkother_text">View to Withdraw</string>
    <string name="anythink_myoffer_second_endcard_title">Beyond Expectation</string>
    <string name="anythink_myoffer_shake_desc">Redirect to third-party App</string>
    <string name="anythink_myoffer_shake_full_title">Sway or tap for it</string>
    <string name="anythink_myoffer_shake_full_title2">Sway to get</string>
    <string name="anythink_myoffer_shake_simple_title">Sway to jump</string>
    <string name="anythink_myoffer_shake_simple_title2">Sway</string>
    <string name="anythink_myoffer_shake_title">Shake your phone</string>
    <string name="anythink_myoffer_slide_hint">Swipe to view</string>
    <string name="anythink_myoffer_special_note_cancel"><u>Cancel</u></string>
    <string name="anythink_myoffer_special_note_delay_click">Jump after &lt;font color=#FFFFFF>%d&lt;/font> s</string>
    <string name="anythink_myoffer_special_note_delay_click_simple">Jump after &lt;font color=#FFFFFF>%d&lt;/font> s</string>
    <string name="anythink_myoffer_splash_skip_text">Skip</string>
    <string name="anythink_myoffer_sub_close_default_skip_text">Continue</string>
    <string name="anythink_myoffer_sub_close_default_text">Close</string>
</resources>