<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="14.0dip" android:textColor="#ffffffff" android:gravity="center" android:id="@id/anythink_myoffer_g2c_jump_confirm_ignore" android:background="@drawable/anythink_myoffer_g2c_jump_confirm_cta_bg" android:layout_width="66.0dip" android:layout_height="36.0dip" android:layout_marginRight="6.0dip" android:text="@string/anythink_myoffer_g2c_jump_confirm_ignore" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <LinearLayout android:orientation="vertical" android:id="@id/anythink_myoffer_ll_jump_confirm_container" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toLeftOf="@id/anythink_myoffer_g2c_jump_confirm_ignore" android:layout_centerVertical="true">
        <TextView android:textSize="13.0dip" android:textColor="#ffffffff" android:ellipsize="end" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_g2c_jump_confirm_hint_text1" android:maxLines="1" />
        <TextView android:textSize="12.0dip" android:textColor="#ff6a6a6a" android:ellipsize="end" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/anythink_myoffer_g2c_jump_confirm_hint_text2" android:maxLines="1" />
    </LinearLayout>
</merge>