<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/anythink_myoffer_rl_root" android:background="@drawable/anythink_myoffer_bg_feedback_dialog" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:id="@id/anythink_myoffer_confirm_msg" android:padding="35.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_reward_exit_confirm_msg" android:layout_centerHorizontal="true" />
    <View android:id="@id/anythink_myoffer_confirm_line_1" android:background="@color/anythink_color_confirm_dialog_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/anythink_myoffer_confirm_msg" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="65.0dip" android:layout_below="@id/anythink_myoffer_confirm_line_1">
        <View android:id="@id/anythink_myoffer_confirm_line_2" android:background="@color/anythink_color_confirm_dialog_line" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_centerHorizontal="true" />
        <TextView android:textSize="16.0sp" android:textColor="@color/anythink_color_cccccc" android:gravity="center" android:id="@id/anythink_myoffer_confirm_give_up" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/anythink_myoffer_reward_exit_confirm_give_up" android:layout_toLeftOf="@id/anythink_myoffer_confirm_line_2" />
        <TextView android:textSize="16.0sp" android:textColor="@color/anythink_color__confirm_dialog_continue" android:gravity="center" android:id="@id/anythink_myoffer_confirm_continue" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/anythink_myoffer_reward_exit_confirm_continue" android:layout_toRightOf="@id/anythink_myoffer_confirm_line_2" />
    </RelativeLayout>
</RelativeLayout>