<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal" android:id="@id/anythink_myoffer_four_element_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.anythink.basead.ui.CloseImageView android:id="@id/anythink_myoffer_banner_close" android:background="#ffa0a0a0" android:padding="1.0dip" android:layout_width="10.0dip" android:layout_height="10.0dip" android:src="@drawable/anythink_browser_close_icon" android:tint="#ffffffff" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    <TextView android:textSize="6.0dip" android:textColor="#ffa0a0a0" android:id="@id/anythink_myoffer_publisher_name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_marginRight="3.0dip" android:layout_toLeftOf="@id/anythink_myoffer_banner_close" android:layout_alignParentTop="true" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_alignParentBottom="true">
        <TextView android:textSize="6.0dip" android:textColor="#ffa0a0a0" android:id="@id/anythink_myoffer_version_name" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:layout_toLeftOf="@id/anythink_myoffer_privacy_agreement" android:layout_alignParentBottom="true" />
        <TextView android:textSize="6.0dip" android:textColor="#ffa0a0a0" android:id="@id/anythink_myoffer_privacy_agreement" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_panel_privacy" android:layout_toLeftOf="@id/anythink_myoffer_banner_center_line" android:layout_alignParentBottom="true" />
        <View android:id="@id/anythink_myoffer_banner_center_line" android:background="#ffa0a0a0" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="7.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:layout_toLeftOf="@id/anythink_myoffer_permission_manage" android:layout_alignParentBottom="true" />
        <TextView android:textSize="6.0dip" android:textColor="#ffa0a0a0" android:id="@id/anythink_myoffer_permission_manage" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_panel_permission" />
        <View android:id="@id/anythink_myoffer_banner_center_line2" android:background="#ffa0a0a0" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="7.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:layout_toLeftOf="@id/anythink_myoffer_permission_manage" android:layout_alignParentBottom="true" />
        <TextView android:textSize="6.0dip" android:textColor="#ffa0a0a0" android:id="@id/anythink_myoffer_function_manage" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/anythink_myoffer_panel_funtion" />
        <com.anythink.core.common.ui.component.RoundImageView android:id="@id/anythink_myoffer_banner_self_ad_logo" android:visibility="gone" android:layout_width="@dimen/anythink_myoffer_banner_ad_logo_width_xs" android:layout_height="@dimen/anythink_myoffer_banner_ad_logo_height_xs" android:layout_marginLeft="6.0dip" android:layout_marginRight="6.0dip" />
    </LinearLayout>
</RelativeLayout>